updated the member info and pics

--- a/organizers.html
+++ b/organizers.html
@@ -50,13 +50,13 @@
     <div id="container page" class="container page">
 
         <!-- Section: members -->
-        <section id="members" class="home-section color-dark text-center bg-white">
+        <section id="leaders" class="home-section color-dark text-center bg-white">
             <div class="container marginbot-50">
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="wow flipInY" data-wow-offset="0" data-wow-delay="0.4s">
                             <div class="section-heading text-center">
-                                <h2 class="h-bold">Organizers</h2>
+                                <h2 class="h-bold">Leaders</h2>
                                 <div class="divider-header"></div>
                             </div>
                         </div>
@@ -66,235 +66,50 @@
             <div class="container marginbot-50">
                 <div class="row">
 
-                    <div class="member row">
+                    <div class="template:leader_info member row">
                         <div class="col-xs-1"></div>
                         <div class="col-md-2 col-xs-3">
-                            <img src="members/fengzhiping.jpg" alt="" class="img-responsive" height="200" width="140" />
+                            <img src="members/{0}" alt="" class="img-responsive" height="200" width="140" />
                         </div>
                         <div class="col-md-9 col-xs-6">
-                            <p><strong>Zhiping Feng</strong></p>
-                            Fifth Year PhD Candidate, Molecular, Cellular & Integrative Physiology，UCLA <br />
-                            B.S. Nankai University <br />
-                            Research Interest: Biophysics, Optogenetics, Systems Biology
+                            <p><strong>{1}, {2}</strong></p>
+                            {3}, {4} <br />
+                            Research/Carer Interest: {5} <br />
+                            Bachelor Degree: {6}
                         </div>
                     </div>
-                    <div class="member row">
-                        <div class="col-xs-1"></div>
-                        <div class="col-md-2 col-xs-3">
-                            <img src="members/gaoshi.jpg" alt="" class="img-responsive" height="200" width="140" />
-                        </div>
-                        <div class="col-md-9 col-xs-6">
-                            <p><strong>Shi Gao</strong></p>
-                            Fifth Year PhD Candidate, Computer Science, UCLA <br />
-                            B.S.  Zhejiang University <br />
-                            Research Interests: Semantic Web, Temporal Database, Database Provenance and Data Mining
-                        </div>
-                    </div>
-                    <div class="member row">
-                        <div class="col-xs-1"></div>
-                        <div class="col-md-2 col-xs-3">
-                            <img src="members/fukai.jpg" alt="" class="img-responsive" height="200" width="140" />
-                        </div>
-                        <div class="col-md-9 col-xs-6">
-                            <p><strong>Kai Fu</strong></p>
-                            Third Year Ph.D, Bioinformatics, UCLA <br />
-                            B.S. Tongji University <br />
-                            Research Interest: Epigenomic regulation of gene expression; Stem Cell Regeneration; Precision Medicine
-                        </div>
-                    </div>
-                    <div class="member row">
-                        <div class="col-xs-1"></div>
-                        <div class="col-md-2 col-xs-3">
-                            <img src="members/jiaqi.jpg" alt="" class="img-responsive" height="200" width="140" />
-                        </div>
-                        <div class="col-md-9 col-xs-6">
-                            <p><strong>Jiaqi Gu</strong></p>
-                            Third Year PhD Candidate, Computer Science, UCLA. <br />
-                            B.S. Fudan University <br />
-                            Research Interest: Big Data Systems
-                        </div>
-                    </div>
-                    <div class="member row">
-                        <div class="col-xs-1"></div>
-                        <div class="col-md-2 col-xs-3">
-                            <img src="members/jiangshanxi.jpg" alt="" class="img-responsive" height="200" width="140" />
-                        </div>
-                        <div class="col-md-9 col-xs-6">
-                            <p><strong>Shanxi Jiang</strong></p>
-                            Second Year PhD, Molecular, Cellular & Integrative Physiology,UCLA <br />
-                            B.S.  Fudan University <br />
-                            Research Interests: Systems Biology, Cardiology, Chromatin Structure, Epigenetics
-                        </div>
-                    </div>
-                    <div class="member row">
-                        <div class="col-xs-1"></div>
-                        <div class="col-md-2 col-xs-3">
-                            <img src="members/kongying.jpg" alt="" class="img-responsive" height="200" width="140" />
-                        </div>
-                        <div class="col-md-9 col-xs-6">
-                            <p><strong>Ying Kong</strong></p>
-                            Third Year PhD, Molecular, Cellular & Integrative Physiology, UCLA <br />
-                            M.D. Xi'an Jiaotong University <br />
-                            Research Interest: Stem Cells Aging, Hematology, Immune System Development
-                        </div>
-                    </div>
-                    <div class="member row">
-                        <div class="col-xs-1"></div>
-                        <div class="col-md-2 col-xs-3">
-                            <img src="members/lirui2.jpg" alt="" class="img-responsive" height="200" width="140" />
-                        </div>
-                        <div class="col-md-9 col-xs-6">
-                            <p><strong>Rui Li</strong></p>
-                            Fifth year Ph.D. Molecular and Medical Pharmacology, UCLA <br />
-                            Bachelor of Medicine, Zhejiang University <br />
-                            Research Interests: Inflammation and Carcinogenesis
-                        </div>
-                    </div>
-                    <div class="member row">
-                        <div class="col-xs-1"></div>
-                        <div class="col-md-2 col-xs-3">
-                            <img src="members/liuting.jpg" alt="" class="img-responsive" height="200" width="140" />
-                        </div>
-                        <div class="col-md-9 col-xs-6">
-                            <p><strong>Ting Liu</strong></p>
-                            Ph.D. Molecular, Cellular & Developmental Biology, UCLA <br />
-                            B.S. Sichuan University <br />
-                            Research Interests: Immune Response to Injury, Stem Cell Biology
-                        </div>
-                    </div>
-                    <div class="member row">
-                        <div class="col-xs-1"></div>
-                        <div class="col-md-2 col-xs-3">
-                            <img src="members/liuwanlu.jpg" alt="" class="img-responsive" height="200" width="140" />
-                        </div>
-                        <div class="col-md-9 col-xs-6">
-                            <p><strong>Wanlu Liu</strong></p>
-                            Second year PhD Candidate, Molecular Biology IDP, UCLA <br />
-                            B.S. Zhejiang University <br />
-                            Research interests: Genomics, Bioinformatics, Epigenetics, Statistics
-                        </div>
-                    </div>
-                    <div class="member row">
-                        <div class="col-xs-1"></div>
-                        <div class="col-md-2 col-xs-3">
-                            <img src="members/yangshen.jpg" alt="" class="img-responsive" height="200" width="140" />
-                        </div>
-                        <div class="col-md-9 col-xs-6">
-                            <p><strong>Yang Shen</strong></p>
-                            Third Year Ph.D., Mechanical Engineering, UCLA <br />
-                            B.Eng. The University of Hong Kong, B.S. Shanghai Jiao Tong University (2+2) <br />
-                            Research Interests: Exoskeleton Robot for Stroke Rehabilitation, Human Computer Interaction, Intelligent Control
-                        </div>
-                    </div>
-                    <div class="member row">
-                        <div class="col-xs-1"></div>
-                        <div class="col-md-2 col-xs-3">
-                            <img src="members/wanghe.jpg" alt="" class="img-responsive" height="200" width="140" />
-                        </div>
-                        <div class="col-md-9 col-xs-6">
-                            <p><strong>He Wang</strong></p>
-                            First year PhD, Molecular, Cellular $ Integrative Physiology, UCLA <br />
-                            B.S: Xi'an Jiaotong University, double degree of Forensic Medicine and Business Management <br />
-                            Research interest: Cardiac hypertrophy and heart failure, Long non-coding RNA, Epigenetics
-                        </div>
-                    </div>
-                    <div class="member row">
-                        <div class="col-xs-1"></div>
-                        <div class="col-md-2 col-xs-3">
-                            <img src="members/wangying.jpg" alt="" class="img-responsive" height="200" width="140" />
-                        </div>
-                        <div class="col-md-9 col-xs-6">
-                            <p><strong>Ying Wang</strong></p>
-                            Fourth Year PhD Candidate, Molecular, Cellular and Integrative Physiology, UCLA <br />
-                            B.S. Nankai University <br />
-                            Research Interests: Skeletal Muscle Wasting and Regeneration, Aging, Immune Regulation of Muscle Physiology
-                        </div>
-                    </div>
-                    <div class="member row">
-                        <div class="col-xs-1"></div>
-                        <div class="col-md-2 col-xs-3">
-                            <img src="members/xuyan.jpg" alt="" class="img-responsive" height="200" width="140" />
-                        </div>
-                        <div class="col-md-9 col-xs-6">
-                            <p><strong>Yan Xu</strong></p>
-                            Master of Landscape Architecture <br />
-                            B.S. Sun-yat-sen University <br />
-                            Research Interest: Landscape design, graphic design
-                        </div>
-                    </div>
-                    <div class="member row">
-                        <div class="col-xs-1"></div>
-                        <div class="col-md-2 col-xs-3">
-                            <img src="members/yanxiao.jpg" alt="" class="img-responsive" height="200" width="140" />
-                        </div>
-                        <div class="col-md-9 col-xs-6">
-                            <p><strong>Xiao Yan</strong></p>
-                            Fifth Year PhD Candidate, Pharmacology, Duke University <br />
-                            Visiting Graduate Researcher, Division of Hematology/Oncology, Department of Medicine, UCLA <br />
-                            B.S. Peking University <br />
-                            Research Interests: Hematopoietic Stem Cell Regeneration and Drug Development
-                        </div>
-                    </div>
-                    <div class="member row">
-                        <div class="col-xs-1"></div>
-                        <div class="col-md-2 col-xs-3">
-                            <img src="members/yanghuan.jpg" alt="" class="img-responsive" height="200" width="140" />
-                        </div>
-                        <div class="col-md-9 col-xs-6">
-                            <p><strong>Huan Yang</strong></p>
-                            Fourth Year  Ph.D candidate, Molecular, Cellular and Integrative Physiology, UCLA <br />
-                            B.S. Zhejiang University <br />
-                            Research Interest: Molecular mechanisms of Parkinson’s Disease
-                        </div>
-                    </div>
-                    <div class="member row">
-                        <div class="col-xs-1"></div>
-                        <div class="col-md-2 col-xs-3">
-                            <img src="members/yangsong.jpg" alt="" class="img-responsive" height="200" width="140" />
-                        </div>
-                        <div class="col-md-9 col-xs-6">
-                            <p><strong>Song Yang</strong></p>
-                            Third Year Ph.D candidate, Chemistry and Biochemistry, UCLA <br />
-                            B.S. Fudan University <br />
-                            Research Interest: Biophysics, Enzyme, Computational chemistry
-                        </div>
-                    </div>
-                    <div class="member row">
-                        <div class="col-xs-1"></div>
-                        <div class="col-md-2 col-xs-3">
-                            <img src="members/zhangziqi.jpg" alt="" class="img-responsive" height="200" width="140" />
-                        </div>
-                        <div class="col-md-9 col-xs-6">
-                            <p><strong>Ziqi Zang</strong></p>
-                            First Year PhD, Economics, UCLA <br />
-                            B.S University of Minnesota,Twin Cities
-                        </div>
-                    </div>
-                    <div class="member row">
-                        <div class="col-xs-1"></div>
-                        <div class="col-md-2 col-xs-3">
-                            <img src="members/zhangjin.jpg" alt="" class="img-responsive" height="200" width="140" />
-                        </div>
-                        <div class="col-md-9 col-xs-6">
-                            <p><strong>Jin Zhang</strong></p>
-                            Third Year Ph.D candidate, Molecular and Medical Pharmacology, UCLA <br />
-                            M.D. Nantong Medical School <br />
-                            Research Interest: Mitochondrial Import of BK Channel in the Heart
-                        </div>
-                    </div>
-                    <div class="member row">
-                        <div class="col-xs-1"></div>
-                        <div class="col-md-2 col-xs-3">
-                            <img src="members/zhenghuixin.jpg" alt="" class="img-responsive" height="200" width="140" />
-                        </div>
-                        <div class="col-md-9 col-xs-6">
-                            <p><strong>Huixin Zheng</strong></p>
-                            Second Year Master, Luskin School of Public Affairs, UCLA <br />
-                            B.S. Sun Yat-sen University <br />
-                            Research Interests: Healthcare Policy and International Development
-                        </div>
-                    </div>
+                </div>
+            </div>
+        </section>
 
+        <section id="members" class="home-section color-dark text-center bg-white">
+            <div class="container marginbot-50">
+                <div class="row">
+                    <div class="col-lg-8 col-lg-offset-2">
+                        <div class="wow flipInY" data-wow-offset="0" data-wow-delay="0.4s">
+                            <div class="section-heading text-center">
+                                <h2 class="h-bold">Members</h2>
+                                <div class="divider-header"></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="container marginbot-50">
+                <div class="row">
+
+                    <div class="template:member_info member row">
+                        <div class="col-xs-1"></div>
+                        <!--<div class="col-md-2 col-xs-3">-->
+                            <!--<img src="members/{0}" alt="" class="img-responsive" height="200" width="140" />-->
+                        <!--</div>-->
+                        <div class="col-md-9 col-xs-6">
+                            <p><strong>{1}, {2}</strong></p>
+                            {3}, {4} <br />
+                            Research/Carer Interest: {5} <br />
+                            Bachelor Degree: {6}
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
@@ -345,6 +160,9 @@
         <script src="js/wow.min.js"></script>
         <script src="js/owl.carousel.min.js"></script>
         <script src="js/nivo-lightbox.min.js"></script>
+        <!-- wait for all html elements to be loaded -->
+        <script src="members/member_info.js"></script>
+        <script src="template.js"></script>
     </div>
 
 </body>
