Add tabs for organization nav, add alumni info, structure imgs

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                                 <li><a href="#career">Careers</a></li>
                                 <li><a href="gallery.html">Gallery</a></li>
                                 <li><a href="advisers.html">Advisers</a></li>
-                                <li><a class="optional" href="organizers.html">Organizers</a></li>
+                                <li><a class="optional" href="organization.html">Organization</a></li>
                             </ul>
                         </div>
                     </div>
