uncomment homepage carousel, add 6 carousel imgs

--- a/index.html
+++ b/index.html
@@ -84,85 +84,10 @@
     <!-- /Navigation -->
 
     <div id="container page" class="container page">
-        <!-- Section: intro -->
-        <!--<section id="intro" class="home-slide text-light">
-            &lt;!&ndash; Carousel &ndash;&gt;
-            <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-                &lt;!&ndash; Indicators &ndash;&gt;
-                <ol class="carousel-indicators">
-                    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-                    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-                    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-                </ol>
-                &lt;!&ndash; Wrapper for slides &ndash;&gt;
-                <div class="carousel-inner">
-                    <div class="item active">
-                        <img src="img/1.jpg" alt="First slide" />
-                        &lt;!&ndash; Static Header &ndash;&gt;
-                        <div class="header-text hidden-xs">
-                            <div class="col-md-12 text-center">
-                                <div class="container margintop-50">
-                                    <h2><span><b>Welcome to UCLA C3S!</b></span></h2><br/>
-                                </div>
-                                <h3><span>Chinese-American Students and Scholars Seminar</span></h3><br/>
-                                <div class="">
-                                    <a class="btn btn-theme btn-sm btn-min-block" href="#about">About us</a>
-                                </div>
-                            </div>
-                        </div>
-                        &lt;!&ndash; /header-text &ndash;&gt;
-                    </div>
-                    <div class="item">
-                        <img src="img/3.jpg" alt="Third slide">
-                        &lt;!&ndash; Static Header &ndash;&gt;
-                        <div class="header-text hidden-xs">
-                            <div class="col-md-12 text-center">
-                                <div class="container margintop-50">
-                                    <h2><span><b>See what is happening</b></span></h2><br/>
-                                </div>
-                                <h3>
-                                    <span>Check out our online schedule and photo gallery </span>
-                                </h3>
-                                <br>
-                                <div class="">
-                                    <a class="btn btn-theme btn-sm btn-min-block" href="#schedule">Online Schedule</a><a class="btn btn-theme btn-sm btn-min-block" href="#photos">Photo Gallery</a>
-                                </div>
-                            </div>
-                        </div>&lt;!&ndash; /header-text &ndash;&gt;
-                    </div>
-                    <div class="item">
-                        <img src="img/2.jpg" alt="Second slide">
-                        &lt;!&ndash; Static Header &ndash;&gt;
-                        <div class="header-text hidden-xs">
-                            <div class="col-md-12 text-center">
-                                <div class="container margintop-50">
-                                    <h2><span><b>Join Us</b></span></h2><br/>
-                                </div>
-                                <h3>
-                                    <span>Get Automatic Reminder</span>
-                                </h3>
-                                <br>
-                                <div class="">
-                                    <a class="btn btn-theme btn-sm btn-min-block" href="#service">Follow us</a><a class="btn btn-theme btn-sm btn-min-block" href="#service">Email List</a>
-                                </div>
-                            </div>
-                        </div>&lt;!&ndash; /header-text &ndash;&gt;
-                    </div>
-                </div>
-                &lt;!&ndash; Controls &ndash;&gt;
-                <a class="left carousel-control" href="#carousel-example-generic" data-slide="prev">
-                    <span class="glyphicon glyphicon-chevron-left"></span>
-                </a>
-                <a class="right carousel-control" href="#carousel-example-generic" data-slide="next">
-                    <span class="glyphicon glyphicon-chevron-right"></span>
-                </a>
-            </div>&lt;!&ndash; /carousel &ndash;&gt;
-        </section>-->
-        <!-- /Section: intro -->
 
         <!-- Section: about -->
         <section id="about" class="top-section home-section color-dark bg-white">
-            <div class="container marginbot-50">
+            <div class="container">
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="wow flipInY" data-wow-offset="0" data-wow-delay="0.4s">
@@ -173,6 +98,63 @@
                             </div>
                         </div>
                     </div>
+                </div>
+            </div>
+            <!-- Section: carousel -->
+            <div class="container marginbot-50">
+                <div id="carousel" class="carousel slide" data-ride="carousel" style="width: 75vw; margin: auto">
+                    <ol class="carousel-indicators">
+                        <li data-target="#carousel" data-slide-to="0" class="active"></li>
+                        <li data-target="#carousel" data-slide-to="1"></li>
+                        <li data-target="#carousel" data-slide-to="2"></li>
+                        <li data-target="#carousel" data-slide-to="3"></li>
+                        <li data-target="#carousel" data-slide-to="4"></li>
+                        <li data-target="#carousel" data-slide-to="5"></li>
+                    </ol>
+                    <div class="carousel-inner">
+                        <div class="item active">
+                            <img src="img/carousel/c1.jpg">
+                            <div class="carousel-caption">
+                                <p>April 10, 2015: C3S Opening Seminar by Prof. Jason Cong - "How to Design Your Career?"</p>
+                            </div>
+                        </div>
+                        <div class="item">
+                            <img src="img/carousel/c2.jpg">
+                            <div class="carousel-caption">
+                                <p>April 10, 2015: C3S Founding Team</p>
+                            </div>
+                        </div>
+                        <div class="item">
+                            <img src="img/carousel/c3.jpg">
+                            <div class="carousel-caption">
+                                <p>March 19, 2016: C3S BBQ at LA Balboa Park</p>
+                            </div>
+                        </div>
+                        <div class="item">
+                            <img src="img/carousel/c4.jpg">
+                            <div class="carousel-caption">
+                                <p>May 26, 2016: C3S Grad Panel "What is it like to be a grad student in US?" for UCLA Chinese Undergrads</p>
+                            </div>
+                        </div>
+                        <div class="item">
+                            <img src="img/carousel/c5.jpg">
+                            <div class="carousel-caption">
+                                <p>October 6, 2016: 2016 C3S Team in front of Royce Hall</p>
+                            </div>
+                        </div>
+                        <div class="item">
+                            <img src="img/carousel/c6.jpg">
+                            <div class="carousel-caption">
+                                <p>October 7, 2016: C3S Special Seminar featured Prof. Pengshan Bao - "The Wisdom of Mencius." </p>
+                            </div>
+                        </div>
+                    </div>
+                    <a class="left carousel-control" href="#carousel" data-slide="prev">
+                        <span class="glyphicon glyphicon-chevron-left"></span>
+                    </a>
+                    <a class="right carousel-control" href="#carousel" data-slide="next">
+                        <span class="glyphicon glyphicon-chevron-right"></span>
+                    </a>
                 </div>
             </div>
             <div class="container">
