replace upcoming event

--- a/index.html
+++ b/index.html
@@ -203,8 +203,12 @@
                         </strong>
                     </p>
                     <div class="col-md-12">
-                        <a class="eventLink" href="http://mp.weixin.qq.com/s?__biz=MzAwOTI4NjAyNg==&mid=401872366&idx=1&sn=126183f5388e0896535b94a58526c9bf#rd">The Promise of Environmental Law in China</a>
-                        <!--img src="events/5_14.jpg" alt="upcoming" width="100%"/-->
+                        <a class="eventLink" href="https://mp.weixin.qq.com/s?__biz=MzAwOTI4NjAyNg==&mid=2649900741&idx=1&sn=910039e065beafe84f51aca2720b9c69&chksm=83671e20b4109736319f7f1b0d1a3f11895557475aa9219b47a91d745581a3d8ae800626fbb3#rd">碧桂园集团寻找2017年“未来领袖”</a>
+                    </div>
+                    <div>
+                        <a class="eventLink" href="https://mp.weixin.qq.com/s?__biz=MzAwOTI4NjAyNg==&mid=2649900741&idx=1&sn=910039e065beafe84f51aca2720b9c69&chksm=83671e20b4109736319f7f1b0d1a3f11895557475aa9219b47a91d745581a3d8ae800626fbb3#rd">
+                            <img src="events/17-05-05.jpg" alt="upcoming" width="20%"/>
+                        </a>
                     </div>
                 </div>
             </div>
