hide career section

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                                 <li><a class="seminar_nav" href="#seminars">Seminars</a></li>
                                 <li><a href="#story">Story</a></li>
                                 <li><a href="#westwood">Westwood Cafe</a></li>
-                                <li><a href="#career">Careers</a></li>
+                                <!--li><a href="#career">Careers</a></li-->
                                 <li><a href="gallery.html">Gallery</a></li>
                                 <li><a href="advisers.html">Advisers</a></li>
                                 <li><a class="optional" href="organizers.html">Organizers</a></li>
@@ -345,7 +345,7 @@
         <!-- /Section: westwood -->
 
         <!-- /Section: career -->
-        <section id="career" class="home-section color-dark bg-white">
+        <!-- section id="career" class="home-section color-dark bg-white">
             <div class="container marginbot-50">
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
@@ -394,7 +394,7 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section -->
         <!-- /Section: career -->
 
         <!-- Section: follow us -->
